--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    background: url(images/background.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
 
 * {
@@ -11,16 +16,11 @@ body {
 }
 
 header {
-    color: rgb(38, 133, 133);
+    color: #ffffff;
     font-family: "Poppin", sans-serif;
 }
 
 main {
-    background: url("image.png") ;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 10px;
     text-align: center;
     min-height: 90vh;
     margin: auto;
@@ -36,23 +36,30 @@ main {
     font-family: "Verdana", sans-serif;
     font-weight: 700;
     color: #ffffff;
+    background-color: black;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 0.5rem;
+    border: 3px solid rgb(240, 6, 6);
+    margin-bottom: 10px;
 }
 
 a {
     text-decoration: none;
+    color: #ffffff
+
 }
 
 .Quote {
-    background-color: rgb(10, 10, 44);
+    background-color: #ffffff;
     padding: 30px;
     border-radius: 10px;
-    color: #ffffff;
+    color: #000000;
     text-align: center;
     font-size: 1.5rem;
     font-weight: 300;
-    max-width: 250px;
+    max-width: 350px;
     font-family: "serif", sans-serif;
-    border-left: 5px solid rgb(33, 214, 214);
 }
 
 .person {
@@ -64,16 +71,11 @@ a {
 }
 
 #new-quote {
-    background-color: rgb(38, 133, 133);
-    border: none;
+    background-color: #000000;
     border-radius: 10px;
     padding: 10px 15px;
-    color: rgb(10, 10, 44);
+    color: #ffffff;
     font-weight: 700;
-    font-size: 1rem;
-    border: 1px solid #ffffff;
-} 
-
-@media (max-width:400px) {
-    body { padding:7px}
+    font-size: 1.2rem;
+    border: 3px solid #ffffff;
 }
