--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background: url(images/background.png);
+    background: url(background.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
